--- a/i18n/es.i18n.json
+++ b/i18n/es.i18n.json
@@ -13,6 +13,7 @@
       "New password": "Nueva contraseña",
       "Reset password": "Restablecer contraseña",
       "Change password": "Cambiar contraseña",
-      "Reset": "Restablecer"
+      "Reset": "Restablecer",
+      "Birthday": "Cumpleaños"
 
 }
