--- a/i18n/es.i18n.json
+++ b/i18n/es.i18n.json
@@ -14,6 +14,45 @@
       "Reset password": "Restablecer contraseña",
       "Change password": "Cambiar contraseña",
       "Reset": "Restablecer",
-      "Birthday": "Cumpleaños"
+      "Birthday": "Cumpleaños",
+      "Amount sold":"Cant. vendida",
+      "Sales performance":"Performance de ventas",
+      "Revenue":"Facturado",
+      "New sale":"Nueva venta",
+      "New expense":"Nuevo gasto",
+      "Treasury":"Tesorería",
+      "Customers":"Clientes",
+      "Vendors":"Proveedores",
+      "Emission":"Emision",
+      "Due":"Vencimiento",
+      "Select invoice type":"Seleccionas tipo de factura",
+      "Product":"Producto",
+      "Amount":"Cantidad",
+      "Price":"Precio",
+      "Disc.":"Desc.",
+      "Taxes":"Impuestos",
+      "Discount":"Descuento",
+      "Net total":"Total neto",
+      "Grant Total":"Total general",
+      "Confirm sale":"Confirmar venta",
+      "Payment days":"Dias de pago",
+      "View details":"Ver detalles",
+      "Switch":"Cambiar",
+      "Selling to":"Vendiendo a",
+      "Buying from":"Comprando de",
+      "Customer details":"Detalles del cliente",
+      "Vendor details":"Detalles del proveedor",
+      "Receivables":"A cobrar",
+      "Payables":"A pagar",
+      "Cash assets":"Disponible",
+      "Name":"Nombre",
+      "Value":"Valor",
+      "Type":"Tipo",
+      "Customers balance":"Saldo cta. corriente clientes",
+      "Vendors balance":"Saldo cta. corriente proveedores",
+      "Invoice type":"Tipo de factura"
+      
+      
+      
 
 }
