ingreso / egreso con errores

--- a/i18n/es.i18n.json
+++ b/i18n/es.i18n.json
@@ -25,7 +25,7 @@
       "Vendors":"Proveedores",
       "Emission":"Emision",
       "Due":"Vencimiento",
-      "Select invoice type":"Seleccionas tipo de factura",
+      "Select invoice type":"Seleccionar tipo de factura",
       "Product":"Producto",
       "Amount":"Cantidad",
       "Price":"Precio",
